--- a/src/assets/styles/variables/colors.scss
+++ b/src/assets/styles/variables/colors.scss
@@ -22,3 +22,9 @@ $gray-3: #8395a7;
 $gray-4: #576574;
 $gray-5: #222f3e;
 $white: #fff;
+
+//border-radius
+$spacer-1: 2px;
+$spacer-2: 4px;
+$spacer-3: 8px;
+$spacer-4: 16px;
