--- a/src/assets/styles/variables/index.scss
+++ b/src/assets/styles/variables/index.scss
@@ -1,1 +1,6 @@
 @import "colors";
+
+//Components style files
+@import '../../../components/Card/index.scss';
+@import '../../../components/CardList/index.scss';
+@import '../../../components/ActionButton/index.scss';
