Change background color

--- a/src/index.css
+++ b/src/index.css
@@ -34,9 +34,8 @@ body {
 	font-family: 'Open Sans', sans-serif;
 	font-family: 'Source Sans Pro', sans-serif;
 	background: #0f0c29;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #24243e, #302b63, #0f0c29); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+	background-image: linear-gradient(135deg, #9796f0 10%, #FBC7D4 100%);
+	background-repeat: no-repeat;
 }
 ol, ul {
 	list-style: none;
