--- a/src/App.scss
+++ b/src/App.scss
@@ -1,1 +1,14 @@
 @import './assets/styles/variables/index';
+
+.container {
+  display: flex;
+  justify-content: center;
+
+  .app {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 1400px;
+    height: 100%;
+  }
+}
