--- a/src/assets/styles/variables/index.scss
+++ b/src/assets/styles/variables/index.scss
@@ -4,3 +4,4 @@
 @import '../../../components/Card/index.scss';
 @import '../../../components/CardList/index.scss';
 @import '../../../components/ActionButton/index.scss';
+@import '../../../components/Input/index.scss';
