--- a/src/components/CardList/index.scss
+++ b/src/components/CardList/index.scss
@@ -1,7 +1,8 @@
 .card-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
+  margin-top: $spacer-6;
 
   &>* {
     margin: $spacer-4;
