Add `Badge` component

--- a/src/assets/styles/variables/index.scss
+++ b/src/assets/styles/variables/index.scss
@@ -5,3 +5,4 @@
 @import '../../../components/CardList/index.scss';
 @import '../../../components/ActionButton/index.scss';
 @import '../../../components/Input/index.scss';
+@import '../../../components/Badge/index.scss';
