--- a/src/assets/styles/variables/index.scss
+++ b/src/assets/styles/variables/index.scss
@@ -1,8 +1,9 @@
 @import "colors";
 
 //Components style files
-@import '../../../components/Card/index.scss';
-@import '../../../components/CardList/index.scss';
-@import '../../../components/ActionButton/index.scss';
-@import '../../../components/Input/index.scss';
-@import '../../../components/Badge/index.scss';
+@import "../../../components/Card/index.scss";
+@import "../../../components/CardList/index.scss";
+@import "../../../components/ActionButton/index.scss";
+@import "../../../components/Input/index.scss";
+@import "../../../components/Badge/index.scss";
+@import "../../../components/Search/index.scss";
