--- a/src/assets/styles/variables/index.scss
+++ b/src/assets/styles/variables/index.scss
@@ -7,3 +7,4 @@
 @import "../../../components/Input/index.scss";
 @import "../../../components/Badge/index.scss";
 @import "../../../components/Search/index.scss";
+@import "../../../components/Sidebar/index.scss";
