Add `ScrollToTop` component

--- a/src/assets/styles/variables/index.scss
+++ b/src/assets/styles/variables/index.scss
@@ -8,3 +8,4 @@
 @import "../../../components/Badge/index.scss";
 @import "../../../components/Search/index.scss";
 @import "../../../components/Sidebar/index.scss";
+@import "../../../components/ScrollToTop/index.scss";
