--- a/src/components/Search/index.scss
+++ b/src/components/Search/index.scss
@@ -2,7 +2,15 @@
   display: flex;
   border-bottom: 1px solid $white;
   align-items: center;
+  background: rgba(83, 83, 83, 0.25);
+  backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  border-radius: 24px;
+  padding: 20px;
   position: relative;
+  justify-content: center;
+  width: 240px;
+  align-items: center;
 
   input {
     background-color: transparent;
@@ -10,8 +18,8 @@
     color: $white;
     outline: none;
     font-size: 20px;
-    margin: 0 14px 0 24px;
-    width: 84%;
+    margin: 0 12px 0 12px;
+    width: 100%;
 
     &::placeholder {
       color: $white;
@@ -21,20 +29,15 @@
   .search-icon {
     transform: rotate(90deg);
     fill: $white;
-    top: 0px;
-    left: 0px;
     width: 20px;
     height: 20px;
     cursor: pointer;
-    position: absolute;
   }
 
   .close-icon {
     fill: $white;
-    right: 0px;
-    width: 12px;
-    height: 12px;
+    width: 16px;
+    height: 16px;
     cursor: pointer;
-    position: absolute;
   }
 }
