Add `SearchItem` and `SearchItemList` component

--- a/src/assets/styles/variables/index.scss
+++ b/src/assets/styles/variables/index.scss
@@ -9,3 +9,5 @@
 @import "../../../components/Search/index.scss";
 @import "../../../components/Sidebar/index.scss";
 @import "../../../components/ScrollToTop/index.scss";
+@import "../../../components/SearchItem/index.scss";
+@import "../../../components/SearchItemList/index.scss";
