--- a/src/components/Badge/index.scss
+++ b/src/components/Badge/index.scss
@@ -1,15 +1,10 @@
 .badge {
   height: 20px;
-  border-radius: $spacer-2;
-  background-color: $blue-2;
+  border-radius: $spacer-3;
+  border: 1px solid $gray-4;
   text-align: center;
   display: inline-flex;
   color: $white;
   min-width: 16px;
   padding: $spacer-2 $spacer-3;
-
-  &:hover {
-    cursor: pointer;
-    background-color: $blue-1;
-  }
 }
