Update style (SearchItem)

--- a/src/components/SearchItem/index.scss
+++ b/src/components/SearchItem/index.scss
@@ -4,10 +4,11 @@
   border: 1px solid rgba(255, 255, 255, 0.18);
   padding: 8px 12px;
   border-radius: 8px;
+  color: $white;
 
   .close-icon {
     padding-left: 10px;
-    fill: $gray-4;
+    fill: $white;
     width: 12px;
     height: 12px;
     cursor: pointer;
