--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -9,6 +9,7 @@
   display: flex;
   justify-content: space-between;
   flex-direction: column;
+  cursor: pointer;
 
   .header {
     display: flex;
