--- a/src/assets/styles/variables/index.scss
+++ b/src/assets/styles/variables/index.scss
@@ -11,3 +11,4 @@
 @import "../../../components/ScrollToTop/index.scss";
 @import "../../../components/SearchItem/index.scss";
 @import "../../../components/SearchItemList/index.scss";
+@import "../../../components/AddApp/index.scss";
