--- a/src/App.scss
+++ b/src/App.scss
@@ -11,6 +11,7 @@
     width: 1400px;
     height: 100%;
     margin-top: 20px;
+    transition: .3s ease;
 
     .search-item-list-wrapper {
       margin-top: $spacer-3;
