Update styles for components

--- a/src/App.scss
+++ b/src/App.scss
@@ -25,4 +25,8 @@
       margin-left: 80px;
     }
   }
+
+  &-wrapper {
+    background: radial-gradient(ellipse 80% 50% at 50% -20%, rgba(120, 119, 198, 0.3), rgba(255, 255, 255, 0));
+  }
 }
