--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -1,7 +1,8 @@
 .card {
   width: 300px;
   height: 250px;
-  background: radial-gradient(circle at top, rgba(41, 41, 46, 1) 0%, rgba(25, 25, 28, 1) 100%);
+  // background: radial-gradient(circle at top, rgba(41, 41, 46, 1) 0%, rgba(25, 25, 28, 1) 100%);
+  background: linear-gradient(rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.05) 100%);
   padding: 24px;
   border-radius: $spacer-4;
   transition: 0.3s;
@@ -52,7 +53,23 @@
     }
   }
 
+  &::before {
+    content: "";
+    pointer-events: none;
+    user-select: none;
+    position: absolute;
+    inset: 0px;
+    border-radius: inherit;
+    padding: 1px;
+    background: linear-gradient(rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.07));
+    -webkit-mask: linear-gradient(black, black) content-box content-box, linear-gradient(black, black);
+    -webkit-mask-composite: xor;
+  }
+
   &:hover {
-    background-color: $gray-5;
+    &::before {
+      background: linear-gradient(rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2));
+      transition: .4s ease;
+    }
   }
 }
