--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,8 @@ body {
 	line-height: 1;
 	font-family: 'Open Sans', sans-serif;
 	font-family: 'Source Sans Pro', sans-serif;
-	background-image: linear-gradient(135deg, #9796f0 10%, #FBC7D4 100%);
+	/* background-image: linear-gradient(135deg, #9796f0 10%, #FBC7D4 100%); */
+	background-color: rgb(0, 2, 18);
 	background-attachment: fixed;
 }
 ol, ul {
