Update style (Card)

--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -21,7 +21,7 @@
       img {
         width: 60px;
         height: 60px;
-        border-radius: 50%;
+        border-radius: 16px;
         background-color: $gray-5;
       }
     }
