--- a/src/assets/styles/variables/index.scss
+++ b/src/assets/styles/variables/index.scss
@@ -12,3 +12,4 @@
 @import "../../../components/SearchItem/index.scss";
 @import "../../../components/SearchItemList/index.scss";
 @import "../../../components/AddApp/index.scss";
+@import "../../../components/BadgeList/index.scss";
