Add `Welcome` component

--- a/src/assets/styles/variables/index.scss
+++ b/src/assets/styles/variables/index.scss
@@ -13,3 +13,4 @@
 @import "../../../components/SearchItemList/index.scss";
 @import "../../../components/AddApp/index.scss";
 @import "../../../components/BadgeList/index.scss";
+@import "../../../components/Welcome/index.scss";
