Add `Terminal` component

--- a/src/assets/styles/variables/index.scss
+++ b/src/assets/styles/variables/index.scss
@@ -14,3 +14,4 @@
 @import "../../../components/AddApp/index.scss";
 @import "../../../components/BadgeList/index.scss";
 @import "../../../components/Welcome/index.scss";
+@import "../../../components/Terminal/index.scss";
