--- a/src/App.scss
+++ b/src/App.scss
@@ -28,6 +28,28 @@
 
   &-wrapper {
     background: radial-gradient(ellipse 80% 50% at 50% -20%, rgba(120, 119, 198, 0.3), rgba(255, 255, 255, 0));
+
+    .welcome{
+      height: 100%;
+    }
+
+    .content-wrapper{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+      margin-top: 20px;
+      transition: .3s ease;
+  
+      .card-list {
+        max-height: 1100px;
+        min-height: 1100px;
+        justify-content: center;
+        overflow-y: scroll;
+        margin-top: $spacer-3;
+      }
+    }
   }
 
   .badge-list {
@@ -36,5 +58,14 @@
 
   .search-item-list-wrapper {
     height: 32px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .welcome{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
   }
 }
