--- a/src/components/Input/index.scss
+++ b/src/components/Input/index.scss
@@ -12,7 +12,7 @@
   &.open,
   &.sidebar-expand {
     width: 230px;
-    height: 400px;
+    height: 300px;
     background-color: rgb(40, 44, 52);
     box-shadow: 0px 0px 0px 0.2px $white;
     transition: .2s ease;
@@ -145,6 +145,15 @@
     &.active {
       display: block;
       transition: height 350ms ease-in-out;
+    }
+  }
+}
+
+@media (max-width: 500px) {
+  .input {
+    &.open,
+    &.sidebar-expand {
+      height: 260px;
     }
   }
 }
