Remove github logo (Sidebar)

--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -19,14 +19,12 @@ $timing: 3s;
     justify-content: space-between;
   }
 
-  .download,
-  .github {
+  .download {
     display: flex;
     align-items: center;
   }
 
-  .download,
-  .github {
+  .download {
     display: flex;
     align-items: center;
     cursor: pointer;
