Update background color (Sidebar)

--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -110,7 +110,7 @@ $timing: 3s;
 @media (max-width: 500px) {
   .sidebar-wrapper {
     .sidebar {
-      background: rgb(31 32 36);
+      background: #101425;
       height: 100vh;
       top: 0;
       left: 0;
